style.css
/* Import Google font - Poppins */
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: 'Poppins', sans-serif;
}

.decorated-text {
    background: linear-gradient(45deg, #9b59b6, #ff6f61); 
    -webkit-background-clip: text; 
    background-clip: text; 
    color: transparent;
}

.header-container {
    display: flex; 
    justify-content: space-between; 
    padding: 1rem 2rem;
}

.keyboard-wrapper {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    min-height: 75vh;
    background-image: url(./src/images/Background.jpg);
    background-size:contain;
  }

  .wrapper header {
    display: flex;
    color: #B2B2B2;
    align-items: center;
    justify-content: space-between;
  }

  header h2 {
    font-size: 1.6rem;
  }
  
  header .column {
    display: flex;
    align-items: center;
  }
  
  header span {
    font-weight: 500;
    margin-right: 15px;
    font-size: 1.19rem;
  }
  
  header input {
    outline: none;
    border-radius: 30px;
  }

  .wrapper {
    padding: 35px 40px;
    border-radius: 20px;
    background: #141414;
  }

  header .column {
    display: flex;
    align-items: center;
  }

  .volume-slider input {
    accent-color: #fff;
  }

  @media screen and (max-width: 815px) {
    .wrapper {
      padding: 25px;
    }
    header {
      flex-direction: column;
    }
    header :where(h2, .column) {
      margin-bottom: 13px;
    }
    .volume-slider input {
      max-width: 100px;
    }
    .piano-keys {
      margin-top: 20px;
    }
    .piano-keys .key:where(:nth-child(9), :nth-child(10)) {
      display: none;
    }
    .piano-keys .black {
      height: 100px;
      width: 40px;
      margin: 0 -20px 0 -20px;
    }
    .piano-keys .white {
      height: 180px;
      width: 60px;
    }
  }

  .volume-slider input {
    accent-color: #fff;
  }

  .keys-checkbox input {
    height: 30px;
    width: 60px;
    cursor: pointer;
    appearance: none;
    position: relative;
    background: #4B4B4B
  }

  .keys-checkbox input::before {
    content: "";
    position: absolute;
    top: 50%;
    left: 5px;
    width: 20px;
    height: 20px;
    border-radius: 50%;
    background: #8c8c8c;
    transform: translateY(-50%);
    transition: all 0.3s ease;
  }

  .keys-checkbox input:checked::before {
    left: 35px;
    background: #fff;
  }

  .piano-keys {
    display: flex;
    list-style: none;
    margin-top: 40px;
  }
  
  .piano-keys .key {
    cursor: pointer;
    user-select: none;
    position: relative;
    text-transform: uppercase;
  }
  
  .piano-keys .black {
    z-index: 1;
    width: 44px;
    height: 140px;
    margin: 0 -22px 0 -22px;
    border-radius: 0 0 5px 5px;
    background: linear-gradient(#333, #000);
  }
  
  .piano-keys .black.active {
    box-shadow: inset -5px -10px 10px rgba(255,255,255,0.1);
    background:linear-gradient(to bottom, #000, #434343);
  }
  
  .piano-keys .white {
    height: 230px;
    width: 70px;
    border-radius: 8px;
    border: 1px solid #000;
    background: linear-gradient(#fff 96%, #eee 4%);
  }
  
  .piano-keys .white.active {
    box-shadow: inset -5px 5px 20px rgba(0,0,0,0.2);
    background:linear-gradient(to bottom, #fff 0%, #eee 100%);
  }
  
  .piano-keys .key span {
    position: absolute;
    bottom: 20px;
    width: 100%;
    color: #A2A2A2;
    font-size: 1.13rem;
    text-align: center;
  }
  
  .piano-keys .key.hide span {
    display: none;
  }
  
  .piano-keys .black span {
    bottom: 13px;
    color: #888888;
  }

  @media screen and (max-width: 615px) {
    .piano-keys .key:nth-child(13),
    .piano-keys .key:nth-child(14),
    .piano-keys .key:nth-child(15),
    .piano-keys .key:nth-child(16),
    .piano-keys .key :nth-child(17) {
      display: none;
    }
    .piano-keys .white {
      width: 50px;
    }
  }

  #drop-area {
    bottom: 1rem;
    width: 80vw;
    height: 100px;
    margin-top: 20px;
    border: 5px dashed #000;
    border-radius: 10px;
    display: flex;
    justify-content: center;
    align-items: center;
    margin-bottom: 20px;
    background-color: #f9f9f9;
    cursor: pointer;
  }

  #cards-container {
    width: 100%;
    max-width: 80vw;
    display: flex;
    flex-wrap: wrap;
    gap: 10px;
  }

  .card {
    margin: 1rem;
    background-color: #fff;
    border: 1px solid #ddd;
    border-radius: 8px;
    padding: 10px;
    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
    width: 15rem;
    display: flex;
    flex-direction: column;
    align-items: center;
    cursor: grab;
  }
  
  .card img {
    max-width: 100%;
    border-radius: 5px;
  }
  
  .card a {
    text-decoration: none;
    color: #333;
    word-break: break-all;
    margin-top: 5px;
    text-align: center;
  }

  .delete-btn {
    margin-top: 10px;
    font-weight: bold;
    padding: 5px;
    background: linear-gradient(45deg, #9b59b6, #ff6f61);
    color: white;
    border: none;
    border-radius: 5px;
    cursor: pointer;
  }

  #chatbot-container {
    position: fixed;
    bottom: 20px;
    right: 20px;
    z-index: 3;
  }

  #chatbot-button {
    background: linear-gradient(45deg, #9b59b6, #ff6f61); ;
    color: white;
    padding: 10px 20px;
    border-radius: 20px;
    cursor: pointer;
    box-shadow: 0px 0px 10px rgba(0,0,0,0.2);
  }
  
  #chat-window {
    width: 300px;
    height: 400px;
    background-color: white;
    border: 1px solid #ccc;
    border-radius: 5px;
    box-shadow: 0px 0px 10px rgba(0,0,0,0.2);
    display: flex;
    flex-direction: column;
    position: fixed;
    bottom: 60px;
    right: 20px;
  }
  
  #chat-header {
    background: linear-gradient(45deg, #9b59b6, #ff6f61); 
    color: white;
    padding: 10px;
    text-align: center;
    border-bottom: 1px solid #ccc;
  }
  
  #chat-body {
    flex: 1;
    display: flex;
    flex-direction: column;
    padding: 10px;
    overflow-y: scroll;
  }
  
  #chat-messages {
    flex: 1;
    overflow-y: auto;
    margin-bottom: 10px;
  }
  
  #chat-input {
    padding: 10px;
    border: 1px solid #ccc;
    border-radius: 5px;
  }
  
  .hidden {
    visibility: hidden;
  }
  

  #timer-container {
    position: absolute;
    top: 3rem;
    right: 2rem;
    padding: 10px;
    border-radius: 5px;
    font-size: 2rem;
  }

  #start-timer-btn {
    font-weight: bold;
    position: relative;
    left: 97rem;
    background: linear-gradient(45deg, #9b59b6, #ff6f61);
    color: white;
    padding: 5px 10px;
    border: none;
    border-radius: 5px;
    cursor: pointer;
    font-size: 0.7rem;
    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
    transition: background-color 0.3s, transform 0.3s;
  }
  
  #start-timer-btn:hover {
    background: linear-gradient(45deg, #9b59b6, #ff6f61);
  }
  
  #start-timer-btn:active {
    transform: scale(0.98);
  }

